[OFBIZ-6499] Added z-index value with dialog class to fix the issue of lookup in theme.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@1703971 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bizznesstime/webapp/bizznesstime/css/style.css
+++ b/themes/bizznesstime/webapp/bizznesstime/css/style.css
@@ -1719,7 +1719,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
     left: -4px; /*must have*/
     width: 200px; /*must have*/
     height: 200px; /*must have*/
-}.ui-dialog { position: absolute; top: 0; left: 0; padding; .2em; width: 300px; overflow: hidden; }
+}.ui-dialog { position: absolute; top: 0; left: 0; padding; .2em; width: 300px; overflow: hidden; z-index: 10000;}
 .ui-dialog .ui-dialog-titlebar { padding: .4em 1em;  height: 16px; position: relative;}
 .ui-dialog .ui-dialog-title { float: left; margin: .1em 16px .1em 0; }
 .ui-dialog .ui-dialog-titlebar-close { position: absolute; right: .3em; top: 50%; width: 19px; margin: -10px 0 0 0; padding: 1px; height: 18px; }
